fix logo on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -68,7 +68,7 @@ section.pure-text-centered {
 }
 
 .logo-mobile {
-  opacity: 0; 
+  display: none; 
 }
 
 @media only screen and (max-device-width: 1024px) {
@@ -88,7 +88,7 @@ section.pure-text-centered {
     left: 40px;
     max-width: none;
     max-height: 100px;
-    opacity: 1;
+    display: block;
     z-index: 100000000000;
   }
 
